# Zap

./: .gitignore  Cargo.toml  LICENSE.md  Readme.md  bench.txt  someZip.zap
someStuff/: someFile.txt
src/: compression.rs  encryption.rs  error.rs  files.rs  internal.rs  lib.rs  main.rs  password.rs  prelude.rs  util.rs
src/compression/: algorithms.rs  gzip.rs  lz4.rs  mod.rs  passthrough.rs  snappy.rs
src/encryption/: aes_gcm_256.rs  algorithm.rs  chachapoly.rs  mod.rs  passthrough.rs  xchachapoly.rs
src/files/: reading.rs  streaming.rs
src/internal/: mod.rs
src/pipeline/: mod.rs
src/signing/: mod.rs  passthrough.rs  signers.rs
