[package]
name = "zap"
version = "0.1.0"
authors = [
    "Steve Gremory <stevegremory2006@gmail.com>",
    "Speykious <speykious@gmail.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = { version = "0.9.3", default-features = false, features=["frame"] }
walkdir = "2.3.2"
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
zapf = { git = "https://github.com/Speykious/zapf", rev = "4608ab5db49be659a2018ad8826334bb78719b31" }
openssl = { version = "0.10.42", features = ["vendored"] }
rpassword = "7.1.0"